@@ -31,7 +31,7 @@ module Spec
         :example => ["-e", "--example [NAME|FILE_NAME]",  "Execute example(s) with matching name(s). If the argument is",
                                                           "the path to an existing file (typically generated by a previous",
                                                           "run using --format failing_examples:file.txt), then the examples",
-                                                          "on each line of thatfile will be executed. If the file is empty,",
+                                                          "on each line of that file will be executed. If the file is empty,",
                                                           "all examples will be run (as if --example was not specified).",
                                                           " ",
                                                           "If the argument is not an existing file, then it is treated as",
@@ -92,7 +92,7 @@ module Spec
 
         @file_factory = File
 
-        self.banner = "Usage: spec (FILE|DIRECTORY|GLOB)+ [options]"
+        self.banner = "Usage: spec (FILE(:LINE)?|DIRECTORY|GLOB)+ [options]"
         self.separator ""
         on(*OPTIONS[:pattern])          {|pattern| @options.filename_pattern = pattern}
         on(*OPTIONS[:diff])             {|diff| @options.parse_diff(diff)}
@@ -130,6 +130,11 @@ module Spec
         return if parse_drb
         
         super(@argv) do |file|
+          if file =~ /^(.+):(\d+)$/
+            file = $1
+            @options.line_number = $2.to_i
+          end
+
           @options.files << file
           blk.call(file) if blk
         end
